# linux-practice

cmakeStudy/my_math/: CMakeLists.txt
cmakeStudy/my_math/app/: CMakeLists.txt  main.cpp
cmakeStudy/my_math/my_lib/: CMakeLists.txt
cmakeStudy/my_math/my_lib/src/: add.cpp  sub.cpp
study17/: makefile  processTest  processTest.c
study20/: test.c
study21/: makefile  myproc  myproc.c
study22/: makefile  myproc  myproc.cpp
study26/: log.txt  makefile  operfile  operfile.c
study26/shell/: makefile  myshell  myshell.cpp
study28/stderr/: test.c
study28/stdio/: main.c  mystdio.c  mystdio.h
study35/: Makefile  code  test.c
study36/: Makefile  code  testpipe.c
study37/: makefile  process_pool  processpool.cc
study38/: Client  Client.cc  Pipe.hpp  Server  Server.cc  makefile
study39/: Client  Client.cc  Server  Server.cc  Shm.hpp  makefile
study40/: code.cc
study41/: makefile  testing  testing.cc
study44/: OS.cc  makefile
study46/: testYhread.cc
study50/: Thread.hpp  main.cc  makefile
study51/: Mutex.hpp  main.cc
study52/BlockQueue/: BlockQueue.hpp  Main.cc  cp_bq  makefile
study52/TestCond/: TestCond.cc  makefile
study54/: test.cc
study54/2.RingQueue/: Main.cc  RingQueue.hpp  Sem.hpp  Task.hpp  makefile
study54/Logger/: Logger.hpp  Main.cc  logger  makefile
study54/Logger/log/: log.txt
study55/ThreadPool/: Logger.hpp  Main.cc  Mutex.hpp  Thread.hpp  ThreadPool.hpp
test/: code.c  test.c
